--- a/presentation/src/main/res/layout/fragment_my_page.xml
+++ b/presentation/src/main/res/layout/fragment_my_page.xml
@@ -34,6 +34,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="18dp"
+            android:onClick="@{() -> viewModel.clickedMyPageMore()}"
             android:background="?android:selectableItemBackground"
             android:src="@drawable/my_page_dot"
             app:layout_constraintEnd_toEndOf="parent"
@@ -86,6 +87,8 @@
             android:id="@+id/school_certification_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="?android:selectableItemBackground"
+            android:onClick="@{() -> viewModel.clickedSchoolCertification()}"
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
             app:layout_constraintStart_toEndOf="@+id/frameLayout"
@@ -149,6 +152,7 @@
             android:scaleType="center"
             android:paddingTop="8dp"
             android:layout_marginEnd="32dp"
+            android:onClick="@{() -> viewModel.clickedWriteArticle()}"
             android:layout_marginBottom="113dp"
             android:src="@drawable/write_article"
             app:layout_constraintBottom_toBottomOf="parent"
