--- a/presentation/src/main/res/navigation/article_nav.xml
+++ b/presentation/src/main/res/navigation/article_nav.xml
@@ -3,20 +3,44 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/article_nav"
-    app:startDestination="@id/articleFragment">
+    app:startDestination="@id/article_fragment">
 
     <fragment
-        android:id="@+id/articleFragment"
+        android:id="@+id/article_fragment"
         android:name="kr.foorun.uni_eat.feature.article.ArticleFragment"
         android:label="ArticleFragment"
         tools:layout="@layout/fragment_article" >
         <action
             android:id="@+id/action_articleFragment_to_articleDetailFragment"
-            app:destination="@id/articleDetailFragment" />
+            app:destination="@id/article_detail_fragment" />
+        <action
+            android:id="@+id/action_articleFragment_to_articleEntireFragment"
+            app:destination="@id/article_entire_fragment" />
     </fragment>
 
     <fragment
-        android:id="@+id/articleDetailFragment"
+        tools:layout="@layout/fragment_article_detail"
+        android:id="@+id/article_detail_fragment"
         android:name="kr.foorun.uni_eat.feature.article.detail.ArticleDetailFragment"
         android:label="ArticleDetailFragment" />
+
+    <fragment
+        tools:layout="@layout/fragment_article_entire"
+        android:id="@+id/article_entire_fragment"
+        android:name="kr.foorun.uni_eat.feature.article.entire.ArticleEntireFragment"
+        android:label="ArticleEntireFragment" >
+        <action
+            android:id="@+id/action_article_entire_fragment_to_article_detail_fragment"
+            app:destination="@id/article_detail_fragment" />
+        <action
+            android:id="@+id/action_article_entire_fragment_to_articleSearchFragment"
+            app:destination="@id/articleSearchFragment" />
+    </fragment>
+
+    <fragment
+        tools:layout="@layout/fragment_article_search"
+        android:id="@+id/articleSearchFragment"
+        android:name="kr.foorun.uni_eat.feature.article.search.ArticleSearchFragment"
+        android:label="ArticleSearchFragment" />
+
 </navigation>
