--- a/presentation/src/main/res/navigation/home_nav.xml
+++ b/presentation/src/main/res/navigation/home_nav.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_nav"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/home_fragment">
 
     <fragment
-        android:id="@+id/homeFragment"
+        tools:layout="@layout/fragment_home"
+        android:id="@+id/home_fragment"
         android:name="kr.foorun.uni_eat.feature.home.HomeFragment"
         android:label="HomeFragment"/>
 </navigation>
