--- a/presentation/src/main/res/layout/item_event.xml
+++ b/presentation/src/main/res/layout/item_event.xml
@@ -14,7 +14,8 @@
 
     <FrameLayout
         android:layout_width="167dp"
-        android:layout_height="238dp">
+        android:layout_height="238dp"
+        android:onClick="@{()->viewModel.onItemClick(event.index)}">
 
         <kr.foorun.uni_eat.base.view.base.BaseImageView
             android:id="@+id/event_item_IV"
