--- a/presentation/src/main/res/values/attrs_base_edit_text.xml
+++ b/presentation/src/main/res/values/attrs_base_edit_text.xml
@@ -4,5 +4,7 @@
         <attr name="android:text"/>
         <attr name="android:textColor"/>
         <attr name="android:hint"/>
+        <attr name="android:textStyle"/>
+        <attr name="android:inputType"/>
     </declare-styleable>
 </resources>
