--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="gray">#F3F3F3</color>
     <color name="gray2">#BDBDBD</color>
     <color name="gray3">#E2E2E2</color>
+    <color name="gray4">#595959</color>
     <color name="search_tag_non">#E5E4EC</color>
     <color name="search_tag_pick">#201F31</color>
 
