--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
             android:background="@color/white"
             app:labelVisibilityMode="labeled"
             android:visibility="gone"
+            app:bottomAnimVisible="@{viewModel.visibleBottom}"
             app:itemIconTint="@drawable/menu_selector"
             app:itemTextColor="@drawable/menu_selector"
             app:menu="@menu/menu_main"
