--- a/presentation/src/main/res/layout/base_edittext.xml
+++ b/presentation/src/main/res/layout/base_edittext.xml
@@ -9,18 +9,16 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <kr.foorun.uni_eat.base.view.base.BaseEditTextView
-            android:id="@+id/edittext"
-            android:layout_width="0dp"
+            android:id="@+id/base_edittext"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
