--- a/presentation/src/main/res/navigation/article_nav.xml
+++ b/presentation/src/main/res/navigation/article_nav.xml
@@ -35,6 +35,9 @@
         <action
             android:id="@+id/action_article_entire_fragment_to_articleSearchFragment"
             app:destination="@id/articleSearchFragment" />
+        <action
+            android:id="@+id/action_article_entire_fragment_to_articlePostFragment"
+            app:destination="@id/articlePostFragment" />
     </fragment>
 
     <fragment
@@ -42,5 +45,16 @@
         android:id="@+id/articleSearchFragment"
         android:name="kr.foorun.uni_eat.feature.article.search.ArticleSearchFragment"
         android:label="ArticleSearchFragment" />
+
+    <fragment
+        tools:layout="@layout/fragment_article_post"
+        android:id="@+id/articlePostFragment"
+        android:name="kr.foorun.uni_eat.feature.article.post.ArticlePostFragment"
+        android:label="ArticlePostFragment" >
+        <argument
+            android:name="@string/hide_bottom"
+            app:argType="boolean"
+            android:defaultValue="true" />
+    </fragment>
 
 </navigation>
