--- a/presentation/src/main/res/values/attrs_base_edit_text_layout.xml
+++ b/presentation/src/main/res/values/attrs_base_edit_text_layout.xml
@@ -4,7 +4,10 @@
         <attr name="android:text"/>
         <attr name="android:hint"/>
         <attr name="android:inputType"/>
+        <attr name="android:textStyle"/>
         <attr name="android:textColor"/>
+        <attr name="android:singleLine"/>
+        <attr name="android:background"/>
         <attr name="defaultValue" format="string"/>
     </declare-styleable>
 </resources>
