--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -27,9 +27,17 @@
     <dimen name="icon_size_mini_52">52dp</dimen>
 
     <dimen name="text_size_large_23">23sp</dimen>
+    <dimen name="text_size_small_12">12sp</dimen>
+    <dimen name="text_size_large_25">25sp</dimen>
+    <dimen name="text_size_large_15">15sp</dimen>
+    <dimen name="text_size_large_21">21sp</dimen>
+
     <dimen name="bottom_option_height_84">84dp</dimen>
     <dimen name="tab_text_15">15sp</dimen>
 
     <dimen name="floating_button_bottom_margin">20dp</dimen>
+
+    <dimen name="tag_item_margin_right_11">11dp</dimen>
+    <dimen name="tag_item_margin_bottom_16">16dp</dimen>
 
 </resources>
