--- a/presentation/src/main/res/layout/base_bar_constraint.xml
+++ b/presentation/src/main/res/layout/base_bar_constraint.xml
@@ -23,30 +23,43 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <kr.foorun.uni_eat.base.view.base.BaseImageView
-                android:id="@+id/front_image"
+            <FrameLayout
+                android:id="@+id/front_image_frame"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/arrow_left"
                 android:layout_marginStart="@dimen/margin_13"
                 android:layout_marginTop="@dimen/top_margin_64"
                 android:visibility="gone"
+                android:background="?android:selectableItemBackground"
                 app:layout_constraintEnd_toStartOf="@id/bar_title"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent">
 
-            <kr.foorun.uni_eat.base.view.base.BaseImageView
-                android:id="@+id/bar_image"
+                <kr.foorun.uni_eat.base.view.base.BaseImageView
+                    android:id="@+id/front_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/bar_image_frame"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/article"
                 android:visibility="gone"
+                android:background="?android:selectableItemBackground"
                 android:layout_marginTop="@dimen/top_margin_64"
                 android:layout_marginStart="@dimen/margin_13"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/front_image"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintStart_toEndOf="@id/front_image_frame"
+                app:layout_constraintTop_toTopOf="parent" >
+
+                <kr.foorun.uni_eat.base.view.base.BaseImageView
+                    android:id="@+id/bar_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+            </FrameLayout>
 
             <kr.foorun.uni_eat.base.view.base.BaseTextView
                 android:id="@+id/bar_title"
@@ -54,24 +67,29 @@
                 android:layout_height="wrap_content"
                 android:textSize="23sp"
                 android:textStyle="bold"
-                android:text="@string/article"
                 android:layout_marginTop="@dimen/top_margin_64"
                 android:layout_marginStart="@dimen/margin_13"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/front_image"
+                app:layout_constraintStart_toEndOf="@id/front_image_frame"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <kr.foorun.uni_eat.base.view.base.BaseImageView
-                android:id="@+id/rear_image"
-                android:layout_width="23dp"
-                android:layout_height="23dp"
-                android:src="@drawable/search_icon"
+            <FrameLayout
+                android:id="@+id/rear_image_frame"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:visibility="gone"
+                android:background="?android:selectableItemBackground"
                 android:layout_marginTop="@dimen/top_margin_64"
                 android:layout_marginEnd="@dimen/margin_13"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent">
+
+                <kr.foorun.uni_eat.base.view.base.BaseImageView
+                    android:id="@+id/rear_image"
+                    android:layout_width="23dp"
+                    android:layout_height="23dp" />
+            </FrameLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
