--- a/presentation/src/main/res/layout/fragment_my_page.xml
+++ b/presentation/src/main/res/layout/fragment_my_page.xml
@@ -4,42 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewModel"
             type="kr.foorun.uni_eat.feature.mypage.MyPageViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/invisible">
+        android:layout_height="match_parent">
 
-        <kr.foorun.uni_eat.base.view.base.BaseTextView
-            android:id="@+id/toolbar_title"
-            android:layout_width="wrap_content"
+        <kr.foorun.uni_eat.base.view.base.BaseBarConstraintView
+            android:id="@+id/bar"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="21dp"
-            android:layout_marginTop="35dp"
-            android:gravity="start"
-            android:text="@string/my_page"
-            android:textSize="23sp"
-            android:textStyle="bold"
+            app:frontVisible="false"
+            app:rearVisible="true"
+            app:rearImage="@drawable/my_page_dot"
+            app:titleText="@string/my_page"
+            app:setViewModel="@{viewModel}"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-        <kr.foorun.uni_eat.base.view.base.BaseImageView
-            android:id="@+id/my_page_more_button"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginEnd="18dp"
-            android:onClick="@{() -> viewModel.clickedMyPageMore()}"
-            android:background="?android:selectableItemBackground"
-            android:src="@drawable/my_page_dot"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/toolbar_title" />
-
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <FrameLayout
             android:id="@+id/frameLayout"
@@ -48,13 +34,12 @@
             android:layout_marginStart="21dp"
             android:layout_marginTop="23dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar_title">
+            app:layout_constraintTop_toBottomOf="@+id/bar">
 
             <kr.foorun.uni_eat.base.view.base.BaseImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/my_page_base_profile" />
-
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_image"
@@ -126,10 +111,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/empty_article"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="89dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/my_write_article" />
 
         <kr.foorun.uni_eat.base.view.base.BaseTextView
             android:id="@+id/empty_article_text"
@@ -153,11 +138,9 @@
             android:paddingTop="8dp"
             android:layout_marginEnd="32dp"
             android:onClick="@{() -> viewModel.clickedWriteArticle()}"
-            android:layout_marginBottom="113dp"
+            android:layout_marginBottom="@dimen/floating_button_bottom_margin"
             android:src="@drawable/write_article"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </layout>
