--- a/presentation/src/main/res/layout/item_event_2.xml
+++ b/presentation/src/main/res/layout/item_event_2.xml
@@ -51,6 +51,7 @@
                 android:layout_gravity="bottom"
                 android:layout_marginStart="10dp"
                 android:layout_marginBottom="19dp"
+                android:letterSpacing="-0.05"
                 android:text="@{`이벤트 기간 `+event.startDate+` - `+event.endDate}"
                 android:textColor="@color/white"
                 android:textSize="11sp" />
@@ -58,12 +59,14 @@
             <kr.foorun.uni_eat.base.view.base.BaseImageView
                 android:id="@+id/event_line"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0.5dp"
                 android:layout_marginStart="14dp"
                 android:layout_marginTop="193dp"
                 android:layout_marginEnd="18dp"
                 android:layout_marginBottom="45dp"
+                android:scaleType="fitXY"
                 android:src="@drawable/white_line" />
+
 
         </FrameLayout>
     </LinearLayout>
