--- a/presentation/src/main/res/layout/item_shop_image.xml
+++ b/presentation/src/main/res/layout/item_shop_image.xml
@@ -14,6 +14,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_marginEnd="5dp"
+        android:onClick="@{() -> viewModel.articleImageClicked()}"
         app:cardCornerRadius="4dp"
         android:layout_width="103dp"
         android:layout_height="103dp">
