--- a/presentation/src/main/res/layout/fragment_home.xml
+++ b/presentation/src/main/res/layout/fragment_home.xml
@@ -1,22 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <variable
+            name="viewMmodel"
+            type="kr.foorun.uni_eat.feature.home.HomeViewModel" />
     </data>
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/navy"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".HomeFragment">
+        android:layout_height="match_parent">
 
-        <!-- TODO: Update blank fragment layout -->
-        <TextView
-            android:id="@+id/test"
+        <kr.foorun.uni_eat.base.view.base.BaseBarConstraintView
+            android:id="@+id/bar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
+            android:layout_height="wrap_content"
+            app:titleImage="@drawable/bar_image"
+            app:tittleImageVisible="true"
+            app:barColor="@color/navy"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
-    </FrameLayout>
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/bar"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <kr.foorun.uni_eat.base.view.base.BaseTextView
+                    android:id="@+id/home_top_explain_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home_explain"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/text_size_large_25"
+                    android:layout_marginStart="@dimen/margin_21"
+                    android:layout_marginTop="40dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <kr.foorun.uni_eat.base.view.base.BaseImageView
+                    android:id="@+id/home_map_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/home_map_button"
+                    android:layout_marginStart="26dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/home_top_explain_text"/>
+
+                <kr.foorun.uni_eat.base.view.base.BaseImageView
+                    android:id="@+id/home_icon_right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/bar_image"
+                    android:layout_marginTop="147dp"
+                    android:layout_marginEnd="19dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+                <kr.foorun.uni_eat.base.view.base.BaseArticleContentConstraintView
+                    android:id="@+id/home_content_constraint"
+                    android:layout_width="match_parent"
+                    android:layout_height="500dp"
+                    android:background="@color/white"
+                    app:root="@color/navy"
+                    app:child="@drawable/article_content_page"
+                    android:layout_marginTop="33dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/home_icon_right">
+
+                    <kr.foorun.uni_eat.base.view.base.BaseTextView
+                        android:id="@+id/home_what_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/home_what_kindof_qes"
+                        android:textSize="@dimen/text_size_large_21"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:layout_marginStart="@dimen/home_margin_start_25"
+                        android:layout_marginTop="45dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
+                    <kr.foorun.uni_eat.base.view.base.BaseImageView
+                        android:id="@+id/home_goto_button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/home_sign"
+                        android:layout_marginTop="16dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/home_what_text"/>
+
+                    <kr.foorun.uni_eat.base.view.base.BaseImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/more_image"
+                        android:layout_marginTop="31.29dp"
+                        android:layout_marginEnd="20.88dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/home_goto_button"/>
+
+                    <kr.foorun.uni_eat.base.view.base.BaseTextView
+                        android:id="@+id/home_what_text2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/what_about_qes"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/text_size_large_21"
+                        android:layout_marginTop="43dp"
+                        android:layout_marginStart="@dimen/home_margin_start_25"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/home_goto_button"/>
+
+                    <kr.foorun.uni_eat.base.view.base.BaseImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/winner_trophy"
+                        android:layout_marginStart="4.53dp"
+                        android:layout_marginTop="32.44dp"
+                        app:layout_constraintStart_toEndOf="@id/home_what_text2"
+                        app:layout_constraintTop_toBottomOf="@id/home_goto_button"/>
+
+                    <kr.foorun.uni_eat.base.view.base.BaseTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/text_size_large_15"
+                        android:textColor="@color/small_text"
+                        android:text="@string/home_text"
+                        android:layout_marginStart="@dimen/home_margin_start_25"
+                        android:layout_marginTop="4dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/home_what_text2"/>
+
+
+                </kr.foorun.uni_eat.base.view.base.BaseArticleContentConstraintView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </androidx.core.widget.NestedScrollView>
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    
 </layout>
